<resources>
    <string name="app_name">Flex</string>

    <string name="hello_world">Hello World!</string>

    <string name="action_settings">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_about">About</string>
    <string name="title_search">Search</string>
    <string name="add_task">Add a Task</string>
    <string name="title_share">Share</string>
    <string name="about_description">A collaboration board towards team progress for projects</string>
    <string name="about_built">built</string>
    <string name="about_designed">designed</string>
    <string name="about_coded">coded</string>
    <string name="about_contributor_by">by Baxter Academy</string>
    <string name="about_contributor_end">Students</string>
    <string name="app_version">Version <a href="https://github.com/baxter-oop/baxter-app">1.0.0</a></string>

    <string name="text_innovative">INNOVATIVE</string>
    <string name="text_ethical">ETHICAL</string>
    <string name="text_flex_friday">FLEX FRIDAY</string>
    <string name="text_stem">STEM</string>
    <string name="text_students">STUDENTS</string>

    <string name="title_todo">To Do</string>
    <string name="title_doing">In Process</string>
    <string name="title_done">Done</string>

    <string name="title_title">Title</string>
    <string name="hint_add_title">Add a Task to Do</string>
    <string name="title_description">Description</string>
    <string name="hint_add_description">Add a Description</string>
    <string name="title_Assignee">Assignee</string>
    <string name="hint_add_assignee">Assign to</string>
    <string name="title_due">Due On</string>
    <string name="hint_add_due">Due Date</string>
    <string name="title_tag">Tag</string>
    <string name="hint_add_tag">Tagged as</string>
    <string name="button_submit_task">Submit</string>
    <string name="hint_task_message">Enter a Task</string>

    <string name="move_to_doing">Move to In Process</string>
    <string name="move_to_done">Move to Done</string>
    <string name="delete">Delete</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
