<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.baxter_academy.flex.AddTaskActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/bar_title"
            android:hint="@string/hint_add_title"
            android:inputType="textCapWords"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/title_title"
            android:layout_toEndOf="@+id/title_title"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:nextFocusForward="@+id/bar_description"/>

        <TextView
            android:id="@+id/title_title"
            android:text="@string/title_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/bar_title" />

        <EditText
            android:id="@+id/bar_description"
            android:hint="@string/hint_add_description"
            android:inputType="textImeMultiLine"
            android:lines="3"
            android:minLines="1"
            android:maxLines="3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_description"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="9dp"
            android:nextFocusForward="@+id/bar_assignee" />

        <TextView
            android:id="@+id/title_description"
            android:text="@string/title_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/bar_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/bar_assignee"
            android:hint="@string/hint_add_assignee"
            android:inputType="textPersonName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/title_assignee"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:imeOptions="actionDone" />

        <TextView
            android:id="@+id/title_assignee"
            android:text="@string/title_Assignee"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/bar_description"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/bar_due"
            android:hint="@string/hint_add_due"
            android:inputType="date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bar_assignee"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/title_assignee"
            android:layout_toEndOf="@id/title_assignee"/>

        <TextView
            android:id="@+id/title_due"
            android:text="@string/title_due"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/bar_due" />
        android:inputType="text"
        <Button
            android:id="@+id/send_button"
            android:text="@string/button_submit_task"
            android:onClick="createTask"
            android:background="@color/colorAccent"
            android:textColor="@color/textColorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:layout_below="@+id/bar_due"
            android:layout_alignRight="@+id/bar_title"
            android:layout_alignEnd="@+id/bar_title" />

    </RelativeLayout>

</RelativeLayout>